--- a/paper slide/DFT/main.tex
+++ b/paper slide/DFT/main.tex
@@ -133,7 +133,7 @@ PhD Forum in Mathematics}
 		  \phi_i^*(\mathbf{r}_i) (-\frac{1}{2}\Delta - \sum_{\text{atom } a}
 			\frac{Z_a}{|\mathbf{r}_i - \mathbf{A}_a|})(\mathbf{r}_i))
 			 \phi_i(\mathbf{r}_i) \\ 
-			&+ \frac{1}{N(N - 1)} \sum_{i \neq j}^N \sum_{k \neq l}^N \iint
+			&+ \frac{1}{2N(N - 1)} \sum_{i \neq j}^N \sum_{k \neq l}^N \iint
 			\mathrm{d}\mathbf{r}_i
 			\frac{1}{|\mathbf{r}_i-\mathbf{r}_j|}
 			\left(\underbrace{\phi_l(\mathbf{r}_j)\phi_l^*(\mathbf{r}_j)}_{\rho_l(\mathbf{r}_j)}
