--- a/review slide/charge_density_prediction/scdp.tex
+++ b/review slide/charge_density_prediction/scdp.tex
@@ -2,69 +2,115 @@
 
 \begin{frame}{SCDP Architecture Overview}
     \begin{itemize}
-        \item Orbital-based approach
-        \item Key components:
+        \item Orbital-based approach with three key ingredients:
         \begin{itemize}
-            \item Spherical-harmonics-based atomic orbitals
-            \item Learnable basis sets
-            \item Efficient evaluation of spherical fields
+            \item Virtual nodes for non-local electronic structures
+            \item Even-tempered Gaussian basis sets
+            \item High-capacity equivariant neural networks (eSCN)
         \end{itemize}
         \item Input: Atomic species and positions
         \item Output: Charge density through orbital coefficients
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Orbital Representation}
+\begin{frame}{Mathematical Formulation}
     \begin{itemize}
-        \item Charge density as sum of spherical fields:
-        \[
-        \rho(\vec{r}) = \sum_i \sum_{nlm} c_{nlm}^i \phi_{nlm}(\vec{r} - \vec{r}_i)
-        \]
+        \item Charge density representation:
+        \begin{align*}
+            \rho(\mathbf{r}) &= \sum_i^N \sum_j^{N_b^i} \sum_{m = -l_{ij}}^{l_{ij}} c_{ijm}^i \Phi_{\alpha_{ij},l_{ij},m,\mathbf{r}_i}(\mathbf{r}, s_{ij}) \\
+            \text{where } \Phi_{\alpha,l,m,\mathbf{r}_i}(\mathbf{r}, s) &= z_{\alpha,l,s} \exp(-s \cdot \alpha r^2) r^l Y_{lm}(\hat{\mathbf{r} - \mathbf{r}_i})
+        \end{align*}
+        \item Model prediction:
+        \begin{align*}
+            \{c_{ijm}, s_{ij}\} &= F(A, R) \\
+            \text{where } A &= \{a_i | i = 1,...,N\} \text{ (atomic types)} \\
+            R &= \{\mathbf{r}_i | i = 1,...,N\} \text{ (coordinates)}
+        \end{align*}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Equivariance Guarantees}
+    \begin{itemize}
+        \item SE(3) equivariance preservation:
+        \begin{itemize}
+            \item Input coordinates: $R \in SO(3), \mathbf{t} \in \mathbb{R}^3$
+            \item Virtual node placement: Bond midpoints (SE(3)-equivariant)
+            \item Basis coefficients: SE(3)-equivariant
+            \item Scaling factors: SE(3)-invariant
+        \end{itemize}
+        \item Architecture components:
+        \begin{itemize}
+            \item eSCN backbone: SO(3) convolutions reduced to SO(2)
+            \item Tensor product layers: Preserve equivariance
+            \item Point-wise spherical non-linearity
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Model Architecture}
+    \begin{itemize}
+        \item Backbone: eSCN (equivariant spherical channel network)
+        \begin{itemize}
+            \item Complexity: $O(L^3)$ vs $O(L^6)$ for tensor products
+            \item Features: Multi-channel spherical harmonics
+            \item Example: $128\times0e + 128\times1o + 128\times2e + 128\times3o$
+        \end{itemize}
+        \item Prediction layers:
+        \begin{align*}
+            \{c_{ijm}, h_i\} &= \text{FullyConnectedTensorProduct}(x_i, x_i) \\
+            s_{ij} &= \frac{C_1}{1 + \exp(-\text{Linear}(h_i) + \ln C_2)} + C_3
+        \end{align*}
+        \item Training objective:
+        \begin{align*}
+            \mathcal{L} &= \mathbb{E}_{\mathbf{r}\in\text{Data}}[|\rho(\mathbf{r}) - \hat{\rho}(\mathbf{r})|]
+        \end{align*}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Fully Connected Tensor Product Operation}
+    \begin{itemize}
+        \item Mathematical definition:
+        \begin{align*}
+            (U^{(\ell_1,p_1)} \otimes V^{(\ell_2,p_2)})^{(\ell_o,p_o)}_{cm_o} &= \sum_{m_1=-\ell_1}^{\ell_1} \sum_{m_2=-\ell_2}^{\ell_2} C^{(\ell_o,m_o)}_{(\ell_1,m_1)(\ell_2,m_2)} U^{(\ell_1,p_1)}_{cm_1} V^{(\ell_2,p_2)}_{cm_2}
+        \end{align*}
         where:
         \begin{itemize}
-            \item $\phi_{nlm}$: Atomic orbital basis functions
-            \item $c_{nlm}^i$: Learnable coefficients
-            \item $\vec{r}_i$: Atomic positions
+            \item $|\ell_1 - \ell_2| \leq \ell_o \leq |\ell_1 + \ell_2|$
+            \item $p_o = p_1p_2$
+            \item $C^{(\ell_o,m_o)}_{(\ell_1,m_1)(\ell_2,m_2)}$ are Clebsch-Gordan coefficients
         \end{itemize}
-        \item Basis functions:
+        \item Properties:
         \begin{itemize}
-            \item Radial part: Gaussian-type orbitals
-            \item Angular part: Spherical harmonics
+            \item Preserves SO(3) equivariance
+            \item Combines features of different angular momenta
+            \item Output channels determined by tensor product rules
+        \end{itemize}
+        \item Implementation:
+        \begin{itemize}
+            \item Pre-computed Clebsch-Gordan coefficients
+            \item Efficient sparse tensor operations
+            \item Channel-wise feature combination
         \end{itemize}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{Learnable Basis Sets}
+\begin{frame}{Virtual Nodes and Basis Sets}
     \begin{itemize}
-        \item Reference basis: def2-QZVPPD
+        \item Virtual nodes:
+        \begin{itemize}
+            \item Placed at bond midpoints
+            \item Use oxygen basis functions
+            \item SE(3)-equivariant placement
+        \end{itemize}
+        \item Even-tempered Gaussian basis:
+        \begin{align*}
+            \alpha_k &= \alpha \cdot \beta^k \text{ for } k = 0,1,2,...,N_l
+        \end{align*}
         \item Learnable parameters:
         \begin{itemize}
-            \item Orbital exponents ($\alpha$)
-            \item Contraction coefficients
-            \item Radial scaling factors
-        \end{itemize}
-        \item Optimization:
-        \begin{itemize}
-            \item End-to-end training
-            \item Physical constraints preserved
-            \item Adaptive to different elements
-        \end{itemize}
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{Efficiency Optimizations}
-    \begin{itemize}
-        \item Spherical channel representation:
-        \begin{itemize}
-            \item Efficient evaluation of spherical harmonics
-            \item Pre-computed Clebsch-Gordan coefficients
-            \item Optimized tensor operations
-        \end{itemize}
-        \item Computational improvements:
-        \begin{itemize}
-            \item >10x faster than existing methods
-            \item Linear scaling with system size
-            \item GPU-optimized implementation
+            \item Basis coefficients $c_{ijm}$
+            \item Scaling factors $s_{ij} \in (0.5, 2.0)$
+            \item Two-stage training for stability
         \end{itemize}
     \end{itemize}
 \end{frame}
@@ -73,15 +119,15 @@
     \begin{itemize}
         \item Accuracy:
         \begin{itemize}
-            \item Competitive with grid-based methods
-            \item Better for systems with strong atomic character
+            \item NMAE: 0.178\% on QM9 test set
+            \item 31.7x faster than ChargE3Net
             \item Flexible accuracy-efficiency trade-off
         \end{itemize}
         \item Efficiency:
         \begin{itemize}
-            \item Faster inference than grid-based methods
-            \item Lower memory requirements
-            \item Scalable to large systems
+            \item Linear scaling with system size
+            \item GPU-optimized implementation
+            \item Efficient basis function evaluation
         \end{itemize}
     \end{itemize}
 \end{frame}
